[main] added delete cmd in REST API
